<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/picturebattleship3">

    <TextView
        android:id="@+id/Score"
        android:layout_width="218dp"
        android:layout_height="68dp"
        android:layout_marginBottom="308dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Score"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WinLoseLayout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Hit"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:layout_marginTop="116dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Hit"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Score" />

    <TextView
        android:id="@+id/HitCNT"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Zero"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toEndOf="@+id/Hit"
        app:layout_constraintTop_toBottomOf="@+id/Score" />

    <TextView
        android:id="@+id/Miss"
        android:layout_width="97dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Miss"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hit" />

    <TextView
        android:id="@+id/MissCNT"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Zero"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toEndOf="@+id/Miss"
        app:layout_constraintTop_toBottomOf="@+id/HitCNT" />

    <TextView
        android:id="@+id/FinalScore"
        android:layout_width="98dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Score"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Miss" />

    <TextView
        android:id="@+id/FinalScoreCNT"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Zero"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/restartProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toEndOf="@+id/FinalScore"
        app:layout_constraintTop_toBottomOf="@+id/MissCNT"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/restartbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Restart"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/menubtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/menubtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Menu"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/restartProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="59dp"
        android:layout_height="61dp"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/restartbtn"
        tools:visibility="invisible" />

    <EditText
        android:id="@+id/WinnersName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/YourName"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@android:color/holo_blue_bright"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Score" />

    <EditText
        android:id="@+id/WinnersLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/YourLocation"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@android:color/holo_blue_bright"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WinnersName"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/EnterScore"
        android:layout_width="128dp"
        android:layout_height="65dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/EnterWinner"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/restartbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/HitCNT"
        app:layout_constraintTop_toBottomOf="@+id/Score"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/WinLoseLayout"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/WinLose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Win"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>